Fix rating alignment on mobile devices in modal header (#2)
* Initial plan

* Fix rating alignment on mobile devices in modal header


---------

--- a/css/style.css
+++ b/css/style.css
@@ -808,6 +808,10 @@ body {
         align-items: center;
     }
     
+    .modal-app-details .rating {
+        justify-content: center;
+    }
+    
     .modal-app-actions {
         width: 100%;
     }
